spring-sample/deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: spring-sample
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: spring-sample
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: spring-sample
  spec:
    replicas: 2
    selector:
      deploymentconfig: spring-sample
    strategy:
      type: "Rolling"
    template:
      metadata:
        labels:
          deploymentconfig: spring-sample
      spec:
        containers:
        - image: claudioed/jenkins_boot
          name: spring-sample
          ports:
          - containerPort: 8080
            protocol: TCP
          livenessProbe:
            httpGet:
              path: actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30            
    triggers:
    - type: ConfigChange
