spring-sample/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: spring-sample-route
spec:
  to:
    kind: Service
    name: spring-sample
